--- a/SCSS/sections/jobs/_search-controller.scss
+++ b/SCSS/sections/jobs/_search-controller.scss
@@ -1,11 +1,11 @@
-#search-controller {
+.search-controller {
     padding: 30px 0px 10px;
     .form-group {
       .bg-gray{
-          background-color: #E2E2E2;
+          background-color: #E2E2E2 !important;
       }
     }
-    #search-jobs-btn{
+    .search-jobs-btn{
         background-color: #5D5D5D !important;
         color: #fff;
         display: block;
