--- a/templates/searchjobs/results.twig
+++ b/templates/searchjobs/results.twig
@@ -1,18 +1,17 @@
 {% extends "_layout" %}
 
 {% block main %}
-<div class="container-fluid pt-5 pb-1 jobs-index">
-    <h1 class="text-center">Search Results</h1>
-
 
     {# Set variables for each possible param: #}
     {% set state = craft.app.request.getParam('state') %}
     {% set trucktype = craft.app.request.getParam('trucktype') %}
+    {% set city = craft.app.request.getParam('city') %}
 
     {% set criteria ={   
         section: 'jobListings',     
-        state:state,
-        truckType: trucktype
+        state: state,
+        truckType: trucktype,
+        city: city,
     } %}
 
     {# Pass the criteria object to the query builder: #}
@@ -21,6 +20,8 @@
     {# Set up pagination, and let it grab the current page's results: #}
     {% paginate query as pageInfo, results %}
 
+    <div class="container-fluid pt-5 pb-1 jobs-index">
+    <h1 class="text-center">Search Results</h1>
 
     {% for result in results %}
     <div class="row p-4">
@@ -28,6 +29,7 @@
             <h3 class="job-header">{{ result.title }}</h3>
             <p><strong><em>Truck:</em></strong> {{ result.truckType }}</p>
             <p><strong><em>State</em></strong>{{ result.state}}</p>
+             <p><strong><em>City:</em></strong> {{ result.city}}</p>
             <a class="btn btn-small btn-details" href="/jobs/{{result.slug}}">Get More Details &nbsp; <i
                     class="fas fa-arrow-right"></i> </a>
             <p class="pt-2"><strong>Benefits: </strong>
