filtering be search criteria on results

--- a/templates/jobs/index.twig
+++ b/templates/jobs/index.twig
@@ -13,6 +13,8 @@
 
 {# THIS IS THE CONTENT UNDER THE NAV #}
 {% block main %}
+
+{# This renders the map with a job locations currently listed and placed #}
 <div class="container-fluid" id="map">
     <div class="row bg-secondary">
         <div class="col-sm-12 p-0">
