--- a/templates/searchRadius/results.twig
+++ b/templates/searchRadius/results.twig
@@ -16,19 +16,20 @@
 {# We build the map location based on criteria #}
 <div class="container-fluid" id="map">
     <div class="row bg-secondary">
-        <div class="col-sm-12 p-0">            
+        <div class="col-sm-12 p-0">      
+              
             {% set locations = entries %}
             {% set options = {     
-                center: {lat: 39.8283, lng:-98.5795},                   
-                height:300,
-                width:1200,            
-                zoom: 4,
+                'markerInfo': 'searchRadius/infoBubble',                                  
+                height:400,
+                zoom: 7,
                markerOptions: {
                 icon: 'https://maps.google.com/mapfiles/ms/icons/green-dot.png'
                     }
             } %}
 
-            <img class="img-fluid d-block mx-auto" src="{{ craft.smartMap.imgSrc(locations, options) }}" />
+            {# <img class="img-fluid d-block mx-auto" src="{{ craft.smartMap.imgSrc(locations, options) }}" /> #}
+            {{ craft.smartMap.map(locations, options) }}
 
         </div>
     </div>
@@ -46,7 +47,7 @@
     <div>        
         <p><strong><em>Truck:</em></strong>  {{ entry.jobAddress.city }}, </p>
         <p><strong><em>Truck:</em></strong>  {{ entry.jobAddress.state }} </p>
-        <p><strong><em>Truck:</em></strong>  {{ entry.jobAddress.zip }} </p>
+        <p><strong><em>Zip:</em></strong>  {{ entry.jobAddress.zip }} </p>
         <p><strong>{{ entry.jobAddress.distance | number_format(1) }} miles away</strong></p>
          <a class="btn btn-small btn-details" href="/jobs/{{entry.slug}}">Get More Details &nbsp; <i
                     class="fas fa-arrow-right"></i> </a>
