--- a/templates/searchjobs/results.twig
+++ b/templates/searchjobs/results.twig
@@ -25,16 +25,16 @@
         <div class="col-sm-12 p-0">            
             {% set locations = query %}
             {% set options = {     
-                center: {lat: 39.8283, lng:-98.5795},                   
-                height:300,
-                width:1200,            
-                zoom: 4,
+                height:400,
+                zoom: 5,
+                'markerInfo': 'searchjobs/infoBubble',
                markerOptions: {
                 icon: 'https://maps.google.com/mapfiles/ms/icons/green-dot.png'
                     }
             } %}
 
-            <img class="img-fluid d-block mx-auto" src="{{ craft.smartMap.imgSrc(locations, options) }}" />
+            {# <img class="img-fluid d-block mx-auto" src="{{ craft.smartMap.imgSrc(locations, options) }}" /> #}
+            {{ craft.smartMap.map(locations, options) }}
 
         </div>
     </div>
