--- a/templates/jobs/infoBubble.twig
+++ b/templates/jobs/infoBubble.twig
@@ -1,21 +1,17 @@
 {% set segments = craft.request.segments %}
 
-{# {% set moreInfoUrl = '/'~segments[0]~'/'~segments[1]~'/'~element.slug~'/' %}
-{% set directionsUrl = craft.smartMap.directions(element.jobAddress, element.title) %} #}
+{# {% set moreInfoUrl = '/'~segments[0]~'/'~segments[1]~'/'~element.slug~'/' %} #}
+{% set directionsUrl = craft.smartMap.directions(element.jobAddress, element.title) %}
 
-<h1>{{ element.title }}</h1>
-<div>
-    {# Your address fields #}
-    {{ element.jobAddress.street1 }}<br>
-    {{ element.jobAddress.city }}, {{ element.jobAddress.state }} {{ element.jobAddress.zip }}
+<h3>{{ element.title }}</h3>
+<div class="div">
+<a class="btn btn-small btn-success" href="jobs/{{element.slug}}">See Job Details</a> 
 </div>
-
-<div>
+<div class="text-center p-2">
     {# "More Info" and "Get Directions" links #}
-    {# <a href="{{ moreInfoUrl }}">More Info</a> | 
-    <a href="{{ directionsUrl }}" target="_blank">Get Directions</a> #}
+    <strong><a class="text-info" href="{{ directionsUrl }}" target="_blank">Get Directions</a></strong>
 </div>
-<div>
+<div class="text-center">
     {# Special "zoomOnMarker" JavaScript function #}
-    <span onclick="smartMap.zoomOnMarker('{{ marker.mapId }}', '{{ marker.markerName }}', 15)">Zoom On Marker</span>
+    <h6 class="text-success" onclick="smartMap.zoomOnMarker('{{ marker.mapId }}', '{{ marker.markerName }}', 15)">Zoom in!</h6>
 </div>
