--- a/templates/forms/index.twig
+++ b/templates/forms/index.twig
@@ -1,16 +1,99 @@
- {% include "_layout" %}
+{% extends "_layout" %}
 
 {% block main %}
+{% set form = craft.freeform.form('shortform') %}
 
-{% if craft.app.request.param('status') == 'true' %}
-<p>Your submission was recieved! </p>
+{{ form.renderTag }}
+
+{% if form.hasErrors %}
+<div class="freeform-form-has-errors">
+    {{ "Error! Please review the form and try submitting again."|t('freeform') }}
+
+    {% if form.errors|length %}
+    <ul>
+        {% for error in form.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+</div>
 {% endif %}
-<div class="container">
-{{ craft.freeform.form('test',{
-    labelClass:"form-control-label",
-    inputClass:"form-control"
-}).render() }}
+
+
+
+
+{# FORM #}
+
+{% set firstName = form.get("firstName") %}
+{% set lastName = form.get("lastName") %}
+{% set recipients = form.get("recipients") %}
+{% set cellphone = form.get('cellPhone') %}
+{% set email = form.get('email') %}
+{% set city = form.get('city') %}
+{% set zipcode = form.get('zipCode') %}
+{% set state = form.get('state') %}
+{% set cdla = form.get('doYouHaveAValidCdlA') %}
+{% set drivingrecord = form.get('doYouHaveACleanDrivingRecord') %}
+{% set exp = form.get('howManyYearsOfCdlADriverExperienceDoYouHave') %}
+
+<div class="container-fluid">
+    <div class="bxslider">
+
+        {# Slide 1 #}
+        <div class="form-group">
+            <div class="row">
+                <div class="col-sm-1 offset-1 col-md-6 offset-3">
+                    <h3>What can you expect after you apply?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis esse adipisci corrupti harum
+                        doloremque
+                        hic repudiandae aspernatur quia! Quibusdam eum sint quia odit quae fuga consequatur fugit? Quasi
+                        dolorum
+                        ipsam veritatis molestias explicabo numquam, labore adipisci nihil, eligendi repellendus
+                        assumenda rerum
+                        porro in nesciunt fuga?</p>
+                    {# First Name #}
+                    <div class="form-group">
+                        {# <label>{{ firstName.label }}</label> #}
+                        <input name="{{ firstName.handle }}" value="{{ firstName.value }}" class="form-control"
+                            placeholder="{{ firstName.label }}" />
+                        {{ firstName.renderErrors() }}
+                    </div>
+                    {# Last Name #}
+                    <div class="form-group">
+                        {# <label>{{ lastName.label }}</label> #}
+                        <input name="{{ lastName.handle }}" value="{{ lastName.value }}" class="form-control"
+                            placeholder="{{ lastName.handle }}" />
+                        {{ lastName.renderErrors() }}
+                    </div>
+                    {# Email #}
+                    <div class="form-group">
+                        {# <label>Email Address</label> #}
+                        <input name="email" class="form-control" placeholder="{{ email.handle }}" />
+                        {{ form.get("email").renderErrors() }}
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {# Slide 2 #}
+        <div class="form-group">
+            <div class="row">
+                <div class="col-sm-1 offset-1 col-md-6 offset-3">
+                <h3>Did you know?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ducimus in optio odio, cum magni hic qui dicta, quia est possimus eveniet voluptatem reiciendis sed excepturi aut, cupiditate accusamus tempora consectetur. Officiis, voluptatem!</p>
+                </div>
+            </div>
+        </div>
+
+
+
+        
+
+    </div>
+
+    <button type="submit">Submit</button>
 </div>
 
+{{ form.renderClosingTag }}
 
-{% endblock %} 
+{% endblock %}
