--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -29,6 +29,19 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
   integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+{# BOX SLIDER #}
+ <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script>
+    $(document).ready(function(){
+      $('.bxslider').bxSlider({
+         auto: false,
+  autoControls: true,
+  stopAutoOnClick: true,
+  pager: true,
+      });
+    });
+  </script>
+
 <!-- Custom JQuery -->
 <script src="/scripts/shortform.js"></script>
 <script src="/scripts/general-search.js"></script>
