--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -14,8 +14,10 @@
   {# animate css#}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
 
+ 
+ {# BOX SLIDER CDN #}
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"> 
+
   {# Custom CSS #}
   <link rel="stylesheet" href="/styles/main.css">
 
- 
- 
