setting up form

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -18,4 +18,5 @@
 
 {# {% include "partials/_shortform" %} #}
 {# {% include "contact/index" %} #}
+{% include "forms/index" %}
 {% include "partials/_footer" %}
