--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,6 @@
 @import 'sections/index/index.scss';
 @import 'sections/jobs/index.scss';
+@import 'sections/shortform/index.scss';
 
 // utlitly functions
 .show{
