--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -1,8 +1,8 @@
 <footer class="container-fluid p-4">
-<div class="row">
-<div class="col">
-  <a class="d-block text-center" href="/"><img class="img-fluid" src="/images/conversion-logo.png" alt=""></a>
-  </div>
+  <div class="row">
+    <div class="col">
+      <a class="d-block text-center" href="/"><img class="img-fluid" src="/images/conversion-logo.png" alt=""></a>
+    </div>
   </div>
 </footer>
 
@@ -30,17 +30,21 @@
   integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 {# BOX SLIDER #}
- <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <script>
-    $(document).ready(function(){
-      $('.bxslider').bxSlider({
-         auto: false,
-  autoControls: true,
-  stopAutoOnClick: true,
-  pager: true,
-      });
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $('.bxslider').bxSlider({
+      auto: false,
+      autoControls: true,
+      stopAutoOnClick: true,
+      pager: true,    
+      pagerType: 'short',   
+      pagerShortSeparator:' of ',
+       infiniteLoop: false,
+      hideControlOnEnd: true 
     });
-  </script>
+  });
+</script>
 
 <!-- Custom JQuery -->
 <script src="/scripts/shortform.js"></script>
