--- a/templates/forms/index.twig
+++ b/templates/forms/index.twig
@@ -1,167 +1,54 @@
-{# {% extends "_layout" %}
+{% set form = craft.freeform.form("shortform") %}
 
-{% block main %} #}
-{% set form = craft.freeform.form('shortform') %}
+{{ form.renderTag({returnUrl: "contact/success"}) }}
 
-{{ form.renderTag }}
+	{% if form.hasErrors %}
+		<div class="freeform-form-has-errors">
+			{{ "There was an error submitting this form"|t }}
 
-{% if form.hasErrors %}
-<div class="freeform-form-has-errors">
-    {{ "Error! Please review the form and try submitting again."|t('freeform') }}
+			{% if form.errors|length %}
+				<ul>
+					{% for error in form.errors %}
+						<li>{{ error }}</li>
+					{% endfor %}
+				</ul>
+			{% endif %}
+		</div>
+	{% endif %}
 
-    {% if form.errors|length %}
-    <ul>
-        {% for error in form.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-</div>
-{% endif %}
+	{% set firstName = form.get("firstName") %}
+	{% set company = form.get("company") %}
+	{% set lastName = form.get("lastName") %}
+	{% set recipients = form.get("recipients") %}
+    {% set firstName = form.get("firstName") %}
 
-{# FORM #}
-{# DEFINE VARIABLES #}
-{% set firstName = form.get("firstName") %}
-{% set lastName = form.get("lastName") %}
-{% set recipients = form.get("recipients") %}
 {% set cellphone = form.get('cellPhone') %}
 {% set email = form.get('email') %}
 {% set city = form.get('city') %}
 {% set zipcode = form.get('zipCode') %}
 {% set state = form.get('state') %}
 
-{# Variables that dont show for some reason #}
-{% set cdlA = form.get("validCdlA") %}
-{% set drivingrecord = form.get('doYouHaveACleanDrivingRecord') %}
-{% set exp = form.get('howManyYearsOfCdlADriverExperienceDoYouHave') %}
+	<label>{{ firstName.label }}</label>
+	<input name="{{ firstName.handle }}" value="{{ firstName.value }}" />
+	{{ firstName.renderErrors() }}
 
-<div class="container-fluid" id="shortform">
-    <div class="bxslider">
-
-        {# Slide 1 #}
-        <div class="form-group bg-secondary" id="form-container">
-            <div class="row">
-                <div class="col-sm-10 offset-1 col-md-6 offset-3">
+	<label>{{ lastName.label }}</label>
+	<input name="{{ lastName.handle }}" value="{{ lastName.value }}" />
+	{{ lastName.renderErrors() }}
 
 
-                    <h3>What can you expect after you apply?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis esse adipisci corrupti harum
-                        doloremque
-                        hic repudiandae aspernatur quia! Quibusdam eum sint quia odit quae fuga consequatur fugit? Quasi
-                        dolorum
-                        ipsam veritatis molestias explicabo numquam, labore adipisci nihil, eligendi repellendus
-                        assumenda rerum
-                        porro in nesciunt fuga?</p>
-                    {# First Name #}
-                    <div class="form-group">
-                        {# <label>{{ firstName.label }}</label> #}
-                        <input name="{{ firstName.handle }}" value="{{ firstName.value }}" class="form-control"
-                            placeholder="{{ firstName.label }}" />
-                        {{ firstName.renderErrors() }}
-                    </div>
-                    {# Last Name #}
-                    <div class="form-group">
-                        {# <label>{{ lastName.label }}</label> #}
-                        <input name="{{ lastName.handle }}" value="{{ lastName.value }}" class="form-control"
-                            placeholder="{{ lastName.handle }}" />
-                        {{ lastName.renderErrors() }}
-                    </div>
-                    {# Email #}
-                    <div class="form-group">
-                        {# <label>Email Address</label> #}
-                        <input name="email" class="form-control" placeholder="{{ email.handle }}" />
-                        {{ form.get("email").renderErrors() }}
-                    </div>
-                </div>
-            </div>
-        </div>
+	<label>Email Address</label>
+	<input name="email" />
+	{{ form.get("email").renderErrors() }}
 
-        {# Slide 2 #}
-        <div class="form-group bg-light">
-            <div class="row">
-                <div class="col-sm-10 offset-1 col-md-6 offset-3">
-                    <h3>Did you know?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ducimus in optio odio, cum
-                        magni hic qui dicta, quia est possimus eveniet voluptatem reiciendis sed excepturi aut,
-                        cupiditate accusamus tempora consectetur. Officiis, voluptatem!</p>
+	<label>Phone</label>
+	<input name="phone" />
+	{% if form.get("cellPhone").hasErrors %}
+		This field is required!
+	{% endif %}
 
-                    {# <div class="form-group">
-                        <label>{{ cldA.label }}</label>                        
-                        {% for option in cdlA.options %}
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="yourFieldHandle" value="{{ option.value }}"
-                                    {{ option.checked ? "checked" }} />
-                                {{ option.label|raw }}
-                            </label>
-                        </div>
-                        {% endfor %}
-                    </div> #}
+	
 
-                    <div class="form-group">
-                        {# <label>{{ lastName.label }}</label> #}
-                        <input name="{{ lastName.handle }}" value="{{ lastName.value }}" class="form-control"
-                            placeholder="{{ lastName.handle }}" />
-                        {{ lastName.renderErrors() }}
-                    </div>
+	<button type="submit">Submit</button>
 
-                    <div class="form-group">
-                        {# <label>{{ lastName.label }}</label> #}
-                        <input name="{{ lastName.handle }}" value="{{ lastName.value }}" class="form-control"
-                            placeholder="{{ lastName.handle }}" />
-                        {{ lastName.renderErrors() }}
-                    </div>
-                    <div class="form-group">
-                        {# <label>{{ lastName.label }}</label> #}
-                        <input name="{{ lastName.handle }}" value="{{ lastName.value }}" class="form-control"
-                            placeholder="{{ lastName.handle }}" />
-                        {{ lastName.renderErrors() }}
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-
-        {# Slide 3 #}
-        <div class="form-group bg-success">
-            <div class="row">
-                <div class="col-sm-10 offset-1 col-md-6 offset-3">
-
-
-                    <h3>What can you expect after you apply?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis esse adipisci corrupti harum
-                        doloremque
-                        hic repudiandae aspernatur quia! Quibusdam eum sint quia odit quae fuga consequatur fugit? Quasi
-                        dolorum
-                        ipsam veritatis molestias explicabo numquam, labore adipisci nihil, eligendi repellendus
-                        assumenda rerum
-                        porro in nesciunt fuga?</p>
-                    {# First Name #}
-                    <div class="form-group">
-                        {# <label>{{ firstName.label }}</label> #}
-                        <input name="{{ firstName.handle }}" value="{{ firstName.value }}" class="form-control"
-                            placeholder="{{ firstName.label }}" />
-                        {{ firstName.renderErrors() }}
-                    </div>
-                    {# Last Name #}
-                    <div class="form-group">
-                        {# <label>{{ lastName.label }}</label> #}
-                        <input name="{{ lastName.handle }}" value="{{ lastName.value }}" class="form-control"
-                            placeholder="{{ lastName.handle }}" />
-                        {{ lastName.renderErrors() }}
-                    </div>
-                    {# Email #}
-                    <div class="form-group">
-                        {# <label>Email Address</label> #}
-                        <input name="email" class="form-control" placeholder="{{ email.handle }}" />
-                        {{ form.get("email").renderErrors() }}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    {{ form.renderClosingTag }}
-
-    {# {% endblock %} #}
+{{ form.renderClosingTag }}
