--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -258,6 +258,25 @@ footer {
     display: block;
     margin: 0 auto; }
 
+.shortform {
+  min-height: 400px; }
+
+.green-form {
+  background-color: #76C168; }
+
+.black-form {
+  background: #3e4040;
+  background: -moz-linear-gradient(25deg, #3e4040 0%, #192326 100%);
+  background: -webkit-linear-gradient(25deg, #3e4040 0%, #192326 100%);
+  background: linear-gradient(25deg, #3e4040 0%, #192326 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3e4040", endColorstr="#192326", GradientType=1); }
+
+.gray-form {
+  background: #5C5C5C;
+  background: -moz-linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
+  background: -webkit-linear-gradient(45deg, #5C5C5C 0%, #637076 100%);
+  background: linear-gradient(45deg, #5C5C5C 0%, #637076 100%); }
+
 .show {
   display: block !important;
   margin: 0 auto; }
