adding placeholder thank you page for now. it is not currently dynamic at the moment

--- a/templates/pages/thanks.twig
+++ b/templates/pages/thanks.twig
@@ -6,7 +6,7 @@
         <br>
         <h3 class="text-white">You qualify and are one step closer <br> to a great career with Conversionia!</h3>
 
-        <img src="/images/celebrate.PNG" alt="" height="200">
+        <img src="/images/celebrate.png" alt="" height="200">
         <br>
         <br>
         <br>
