--- a/templates/searchjobs/results.twig
+++ b/templates/searchjobs/results.twig
@@ -6,8 +6,8 @@
 {% set state = craft.app.request.getParam('state') %}
 {% set trucktype = craft.app.request.getParam('trucktype') %}
 {% set city = craft.app.request.getParam('city') %}
-{% set target = craft.app.request.getParam('zip') %}
 {% set range = craft.app.request.getParam('range') %}
+{% set target = craft.app.request.getParam('zip') %}
 
 {# Here we set the criteria and combine all the parameter variables #}
 {% set criteria ={   
@@ -16,13 +16,23 @@
         truckType: trucktype,
         city: city,   
         jobAddress:{
-            target:target,
-            range: range
-        }            
+            zip:target
+        }                
     } %}
 
 {# Pass the criteria object to the query builder: #}
-{% set query = craft.entries(criteria).orderBy('score') %}
+{% set query = craft.entries(criteria)%}
+
+
+{% if target is not empty and range is not empty %}
+    {% set query = query|merge({    
+        jobAddress:{
+            range: range    
+        }   }) %}
+{% endif %}
+
+
+
 
 {# We build the map location based on criteria #}
 <div class="container-fluid" id="map">
@@ -43,7 +53,7 @@
     </div>
 </div>
 
-
+{# DISPLAY Search Results #}
 <div class="container-fluid pt-5 pb-1 jobs-index">
     <h1 class="text-center">Search Results</h1>
     {# Set up pagination, and let it grab the current page's results: #}
@@ -65,6 +75,7 @@
                 {% endfor %}
             </p>
             <p><strong>{{ result.jobAddress.distance | number_format(1) }} miles away</strong></p>
+            
 
         </div>
     </div>
