adding lance's styles

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,6 +1,7 @@
 @import 'sections/index/index.scss';
 @import 'sections/jobs/index.scss';
 @import 'sections/shortform/index.scss';
+@import 'sections/shortform/lance.scss';
 
 // utlitly functions
 .show{
