--- a/templates/searchjobs/results.twig
+++ b/templates/searchjobs/results.twig
@@ -60,25 +60,44 @@
 
     {% for result in results %}
     <div class="row p-4">
-        <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 bg-light p-2">
-            <h3 class="job-header">{{ result.title }}</h3>
-            <p><strong><em>Truck:</em></strong> {{ result.truckType }}</p>
-            <p><strong><em>State</em></strong>{{ result.state}}</p>
-            <p><strong><em>City:</em></strong> {{ result.city}}</p>
-            <a class="btn btn-small btn-details" href="/jobs/{{result.slug}}">Get More Details &nbsp; <i
-                    class="fas fa-arrow-right"></i> </a>
-            <p class="pt-2"><strong>Benefits: </strong>
-                {% for option in result.jobBenefits %}
-                {{ option.value }}
-                {# Value: {{ option }} or {{ option.value }} #}
-                {% endfor %}
-            </p>
-                {# Show the Radius #}
-                {% if target is not empty and range is not empty %}
-            <p><strong>{{ result.jobAddress.distance | number_format(1) }} miles away</strong></p>
-                {% endif %}
+        <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 bg-light p-2">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    {# <h3 class="job-header">{{entry.jobType}}</h3> #}
+                    <p><strong><em>State</em></strong> {{result.state}}</p>
+                    <p><strong><em>City</em></strong> {{result.city}}</p>
+                    <a class="btn btn-small btn-details" href="/jobs/{{result.slug}}">Get More Details &nbsp; <i
+                            class="fas fa-arrow-right"></i></a>
+
+                    {# Show the Radius #}
+                    {% if target is not empty and range is not empty %}
+                    <div class="container mt-3">
+                    <p><strong>{{ result.jobAddress.distance | number_format(1) }} miles away</strong></p>
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <div class="container">
+                        <div class="row">
+                            <p><strong>Driver Type:</strong> <br>{{result.driverType}} </p> &nbsp;&nbsp;&nbsp;
+                            <p><strong>Truck Type:</strong><br>{{result.truckType}}</p> &nbsp;&nbsp;&nbsp;
+                            <p><strong> Job Type:</strong><br>{{result.jobType}}</p> &nbsp;&nbsp;&nbsp;
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <p class="pt-2"><strong>Benefits: </strong> <br>
+                                {% for option in result.jobBenefits %}
+                                {{ option.label }},
+                                {% endfor %}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
     {% endfor %}
 
 
