--- a/templates/index.twig
+++ b/templates/index.twig
@@ -94,7 +94,7 @@
     </div>
 </div>
 
-{{ craft.freeform.form("shortform").render() }}
+{# {{ craft.freeform.form("shortform").render() }} #}
 
 
 {% endblock %}
