--- a/templates/searchjobs/results.twig
+++ b/templates/searchjobs/results.twig
@@ -60,10 +60,10 @@
 
     {% for result in results %}
     <div class="row p-4">
-        <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 bg-light p-2">
+        <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 bg-light p-4">
             <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    {# <h3 class="job-header">{{entry.jobType}}</h3> #}
+                <div class="col-sm-12 col-md-6 p-1">
+                    <h3 class="job-header">{{result.title}}</h3>
                     <p><strong><em>State</em></strong> {{result.state}}</p>
                     <p><strong><em>City</em></strong> {{result.city}}</p>
                     <a class="btn btn-small btn-details" href="/jobs/{{result.slug}}">Get More Details &nbsp; <i
@@ -76,7 +76,7 @@
                     </div>
                     {% endif %}
                 </div>
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6 p-1">
                     <div class="container">
                         <div class="row">
                             <p><strong>Driver Type:</strong> <br>{{result.driverType}} </p> &nbsp;&nbsp;&nbsp;
