--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -21,7 +21,19 @@
     <div class="row">
       <div class="col-sm-12 col-md-8 offset-md-2">
         <img src="/images/conversion-logo.png" alt="">
-        <a href="#" id="driver-tab-trigger">Company Driver&nbsp;<i class="fas fa-chevron-down"></i></a>
+        <a href="#" id="driver-tab-trigger">
+
+       {# Get the requested category slug from the URL #}
+          {% set slug = craft.app.request.getSegment(1) %}    
+            {% if slug %}            
+              {{ slug }}
+            {% else %}
+            Company Driver   
+            {% endif %}
+         
+        {# Company Driver&nbsp; #}
+        
+        <i class="fas fa-chevron-down"></i></a>
       </div>
     </div>
     <ul id="driver-tabs">
