--- a/templates/jobs/index.twig
+++ b/templates/jobs/index.twig
@@ -65,7 +65,7 @@
     <h3 class="text-center">Available Opportunities</h3>
     {% set query = craft.entries()
     .section('jobListings')
-    .limit(5) %}
+    .limit(10) %}
 
     {% paginate query as pageInfo, pageEntries %}
 
@@ -104,11 +104,40 @@
     {% endfor %}
 
     <div class="container text-center">
-        {% if pageInfo.prevUrl %}<a class="btn btn-small btn-success text-center" href="{{ pageInfo.prevUrl }}">Previous
+        {# {% if pageInfo.prevUrl %}<a class="btn btn-small btn-success text-center" href="{{ pageInfo.prevUrl }}">Previous
             Page</a> &nbsp; &nbsp;{% endif %}
         {% if pageInfo.nextUrl %}<a class="btn btn-small btn-success text-center" href="{{ pageInfo.nextUrl }}">Next
-            Page</a>{% endif %}
-    </div>
+            Page</a>{% endif %} #}
+
+               {% if pageInfo.prevUrl %}<a href='{{ pageInfo.prevUrl }}' class='btn btn-small btn-success text-center'>&lt;</a>{% endif %}
+
+                    {% if pageInfo.currentPage > 2 %}
+                        <a class='btn btn-small btn-success text-center' href='{{ pageInfo.firstUrl }}'>{{ 1 }}</a>
+                    {% endif %}
+
+                    {% if pageInfo.currentPage > 3 %}
+                        <span>...</span>
+                    {% endif %}
+
+                    {% for page, url in pageInfo.getPrevUrls(1) %}
+                        <a class='btn btn-small btn-success text-center' href='{{ url }}'>{{ page }}</a>
+                    {% endfor %}
+                         <span class='btn btn-small btn-success text-center'>{{ pageInfo.currentPage }}</span>
+
+                    {% for page, url in pageInfo.getNextUrls(1) %}
+                        <a class='btn btn-small btn-success text-center' href='{{ url }}'>{{ page }}</a>
+                    {% endfor %}
+
+
+                    {% if pageInfo.currentPage < pageInfo.totalPages-2 %}
+                        <span>...</span>
+                    {% endif %}
+
+                    {% if pageInfo.currentPage < pageInfo.totalPages-1 %}
+                        <a class='btn btn-small btn-success text-center' href='{{ pageInfo.lastUrl }}'>{{ pageInfo.totalPages }}</a>
+                    {% endif %}
+
+                    {% if pageInfo.nextUrl %}<a href='{{ pageInfo.nextUrl }}' class='btn btn-small btn-success text-center'>&gt;</a>{% endif %}
 
 
 </div>
