--- a/templates/jobs/index.twig
+++ b/templates/jobs/index.twig
@@ -2,7 +2,7 @@
 
 {# <!-- THIS IS FOR SEO, PARTIALLY TAKEN OUT OF HEAD TAG --> #}
 {% block SEO %}
-{% for entry in craft.entries.section('home') %}
+{% for entry in craft.entries.section('home').all() %}
 <meta name="keywords" content="{{entry.keywords}}">
 <meta name="description" content="{{entry.metaDescription}}">
 <title>{{entry.titleTag}}</title>
@@ -76,9 +76,11 @@
                 <div class="col-sm-12 col-md-6">
                     <h3 class="job-header">{{entry.jobType}}</h3>
                     <p><strong><em>State</em></strong> {{entry.state}}</p>
-                    <p><strong><em>City</em></strong> {{entry.city}}</p>                   
+                    <p><strong><em>City</em></strong> {{entry.city}}</p>     
+                      {# ZIP #}
+                    <p><strong><em>Zip</em></strong> {{entry.jobAddress.zip}}</p>              
                     <a class="btn btn-small btn-details" href="/jobs/{{entry.slug}}">Get More Details &nbsp; <i
-                            class="fas fa-arrow-right"></i></a>
+                            class="fas fa-arrow-right"></i></a>                  
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <div class="container">
