restructuring the jobs folder

--- a/templates/jobs/searchjobs/results.twig
+++ b/templates/jobs/searchjobs/results.twig
@@ -42,7 +42,7 @@
             {% set options = {     
                 height:400,
                 zoom: 5,
-                'markerInfo': 'searchjobs/infoBubble',
+                'markerInfo': 'jobs/searchjobs/infoBubble',
                markerOptions: {
                 icon: 'https://maps.google.com/mapfiles/ms/icons/green-dot.png'
                     }
