--- a/templates/jobs/searchjobs/search-controller.twig
+++ b/templates/jobs/searchjobs/search-controller.twig
@@ -3,7 +3,7 @@
       <div class="row">
           <div class="col-8 offset-2">
 
-              <form action="{{ url('searchjobs/results') }}">
+              <form action="{{ url('jobs/searchjobs/results') }}">
                   <div class="form-group">
                       {# SELECT STATE #}
                       <select name="state" class="form-control bg-gray" id="">
